tests/valid/merge-multiple-files/collision-resolution/expected.edxml
<?xml version="1.0" encoding="UTF-8"?>
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:255:mc"/>
      <objecttype name="b" description="b" display-name-singular="b" display-name-plural="b" version="1" data-type="datetime"/>
      <objecttype name="c" description="c" display-name-singular="c" display-name-plural="c" version="1" data-type="number:int"/>
      <objecttype name="d" description="d" display-name-singular="d" display-name-plural="d" version="1" data-type="string:255:mc"/>
      <objecttype name="e" description="d" display-name-singular="d" display-name-plural="d" version="1" data-type="sequence"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" event-version="v" display-name-singular="a" display-name-plural="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="b" description="b" optional="false" multivalued="false" merge="min"/>
          <property name="c" object-type="c" description="c" optional="false" multivalued="false" merge="max"/>
          <property name="d" object-type="d" description="d" optional="true" multivalued="true" merge="add"/>
          <property name="e" object-type="d" description="e" optional="true" multivalued="false" merge="replace"/>
          <property name="f" object-type="d" description="f" optional="true" multivalued="true" merge="drop"/>
          <property name="g" object-type="d" description="g" optional="true" multivalued="false" merge="replace"/>
          <property name="h" object-type="d" description="g" optional="true" multivalued="true" merge="set"/>
          <property name="v" object-type="e" description="g" optional="false" multivalued="false" merge="max"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources>
      <source uri="/test/" description="a" version="1"/>
    </sources>
  </ontology>
  <event event-type="a" source-uri="/test/" parents="e9d71f5ee7c92d6dc9e92ffdad17b8bd49418f98,84a516841ba77a5b4648de2cd0dfcb30ea46dbb4,86f7e437faa5a7fce15d1ddcb9eaeaea377667b8">
    <properties>
      <a>a</a>
      <b>1800-01-01T12:00:00.000000Z</b>
      <c>0</c>
      <v>1</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>b</a>
      <b>1800-01-01T12:00:00.000000Z</b>
      <c>0</c>
      <v>2</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>d</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>2</c>
      <v>1</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>e</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>3</c>
      <v>1</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>f</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <d>One</d>
      <d>Two</d>
      <d>Three</d>
      <d>Four</d>
      <v>3</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>g</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <e>Three</e>
      <f>Blue</f>
      <v>2</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>h</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>1</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>i</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>j</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>k</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>l</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>m</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>n</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>o</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>p</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <v>0</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>q</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <h>apples</h>
      <h>oranges</h>
      <v>1</v>
    </properties>
  </event>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>r</a>
      <b>2000-01-01T00:00:00.000000Z</b>
      <c>0</c>
      <h>apples</h>
      <h>oranges</h>
      <v>2</v>
    </properties>
  </event>
</edxml>
