tests/invalid/ontology/relation-confidence-too-large.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if a relation having a confidence that is too large is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations>
          <other property1="a" property2="b" description="[[a]] linked to [[b]]" confidence="11" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
